--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 *.pyc
 marineproject 2nd oct/marineproject/marineapp/__pycache__
 marineproject 2nd oct/virtenv
+marineproject 2nd oct/marineproject/marineproject/__pycache__
