--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 marineproject 2nd oct/marineproject/marineapp/__pycache__
 marineproject 2nd oct/virtenv
 marineproject 2nd oct/marineproject/marineproject/__pycache__
+marineproject 2nd oct/marineproject/marineapp/migrations/__pycache__
