--- a/marineproject 2nd oct/requirements.txt
+++ b/marineproject 2nd oct/requirements.txt
@@ -1,2 +1,6 @@
-Django == 3.2.8
-django-otp == 1.1.1
+Django==3.2.8
+django-otp==1.1.1
+asgiref==3.4.1
+pytz==2021.3
+sqlparse==0.4.2
+django-multiselectfield==0.1.12
