--- a/marineproject 2nd oct/requirements.txt
+++ b/marineproject 2nd oct/requirements.txt
@@ -1,6 +1,18 @@
-Django==3.2.8
-django-otp==1.1.1
+aiodns==3.0.0
+aiosmtpd==1.4.2
 asgiref==3.4.1
-pytz==2021.3
-sqlparse==0.4.2
+atpublic==2.3
+attrs==21.2.0
+beautifulsoup4==4.10.0
+cffi==1.15.0
+Django==3.2.8
+django-bootstrap-v5==1.0.6
 django-multiselectfield==0.1.12
+django-otp==1.1.1
+Django-Verify-Email==1.0.7
+pycares==4.1.2
+pycparser==2.20
+pytz==2021.3
+soupsieve==2.2.1
+sqlparse==0.4.2
+verify-email==2.4.3
