--- a/marineproject 2nd oct/requirements.txt
+++ b/marineproject 2nd oct/requirements.txt
@@ -7,6 +7,7 @@ beautifulsoup4==4.10.0
 cffi==1.15.0
 Django==3.2.8
 django-bootstrap-v5==1.0.6
+django-email-verification==0.1.0
 django-multiselectfield==0.1.12
 django-otp==1.1.1
 Django-Verify-Email==1.0.7
