--- a/marineproject 2nd oct/requirements.txt
+++ b/marineproject 2nd oct/requirements.txt
@@ -17,3 +17,11 @@ pytz==2021.3
 soupsieve==2.2.1
 sqlparse==0.4.2
 verify-email==2.4.3
+gunicorn==20.1.0
+# autopep8==1.5.7
+# dj-database-url==0.5.0
+# pycodestyle==2.7.0
+# python-decouple==3.4
+# toml==0.10.2
+# Unipath==1.1
+# whitenoise==5.3.0
