--- a/marineproject 2nd oct/requirements.txt
+++ b/marineproject 2nd oct/requirements.txt
@@ -18,6 +18,7 @@ soupsieve==2.2.1
 sqlparse==0.4.2
 verify-email==2.4.3
 gunicorn==20.1.0
+Pillow==8.4.0
 # autopep8==1.5.7
 # dj-database-url==0.5.0
 # pycodestyle==2.7.0
